--- a/ASS_2/q2.ipynb
+++ b/ASS_2/q2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,29 +109,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo.mongo_client import MongoClient\n",
+    "from pymongo.errors import ConnectionFailure\n",
+    "from datetime import datetime\n",
+    "from urllib.parse import quote_plus\n",
     "\n",
     "def connect_mongo() -> MongoClient:\n",
     "    \"\"\"\n",
-    "    Return the MongoDB client after successful connection\n",
+    "    Return the MongoDB client after successful connection and initialize database with Binance data\n",
     "    \"\"\"    \n",
-    "    ...\n",
+    "    # need to use curl ifconfig.me to get the IP address of the codespace/ pc and add it to the IP whitelist in MongoDB first\n",
+    "    username = quote_plus(\"py\")\n",
+    "    password = quote_plus(\"p233340\")\n",
+    "    \n",
+    "    connection_string = (\n",
+    "        f\"mongodb+srv://{username}:{password}@com6002ass2.udksn.mongodb.net/\"\n",
+    "        \"?retryWrites=true&w=majority&appName=COM6002ASS2\"\n",
+    "        \"&tls=true&tlsAllowInvalidCertificates=true\"\n",
+    "    )\n",
+    "    \n",
+    "    try:\n",
+    "        # Connect to MongoDB\n",
+    "        client = MongoClient(\n",
+    "            connection_string,\n",
+    "            serverSelectionTimeoutMS=5000\n",
+    "        )\n",
+    "        \n",
+    "        # Test the connection\n",
+    "        client.admin.command('ping')\n",
+    "        \n",
+    "        # Create/get database and collection\n",
+    "        db = client['binance']\n",
+    "        collection = db['COM6002_ASS2']\n",
+    "        \n",
+    "        # Create index for time field if it doesn't exist\n",
+    "        collection.create_index([('time', 1)], unique=True)\n",
+    "        \n",
+    "        return client\n",
+    "        \n",
+    "    except ConnectionFailure as e:\n",
+    "        raise Exception(f\"Failed to connect to MongoDB: {e}\")\n",
+    "    except Exception as e:\n",
+    "        raise Exception(f\"Error setting up database: {e}\")\n",
     "\n",
     "def get_last_date(client: MongoClient) -> Optional[datetime]:\n",
     "    \"\"\"\n",
     "    Return the datetime of the latest record in the database.\n",
     "    \"\"\"\n",
-    "    ...\n",
+    "    db = client['binance']\n",
+    "    collection = db['COM6002_ASS2']  # Replace with your collection name\n",
+    "    \n",
+    "    # Find the latest record by sorting in descending order\n",
+    "    latest_record = collection.find_one(\n",
+    "        {},\n",
+    "        sort=[('timestamp', -1)]  # Assuming 'timestamp' is your datetime field\n",
+    "    )\n",
+    "    \n",
+    "    if latest_record and 'timestamp' in latest_record:\n",
+    "        return latest_record['timestamp']\n",
+    "    return None\n",
     "\n",
-    "def save_records(client: MongoClient, records: list[dict]) -> None:\n",
+    "def save_records(client: MongoClient, records: list) -> None:\n",
     "    \"\"\"\n",
-    "    Save the records to the database.    \n",
+    "    Save the records to MongoDB\n",
+    "    \n",
+    "    Args:\n",
+    "        client: MongoDB client\n",
+    "        records: List of records to save\n",
     "    \"\"\"\n",
-    "    ..."
+    "    if not records:\n",
+    "        print(\"No records to save\")\n",
+    "        return\n",
+    "        \n",
+    "    db = client['binance']\n",
+    "    collection = db['COM6002_ASS2']\n",
+    "    \n",
+    "    successful_updates = 0\n",
+    "    \n",
+    "    for record in records:\n",
+    "        try:\n",
+    "            # Update document if exists, insert if it doesn't\n",
+    "            result = collection.update_one(\n",
+    "                {'time': record['time']},  # query criteria\n",
+    "                {'$set': record},          # update/insert data\n",
+    "                upsert=True                # insert if doesn't exist\n",
+    "            )\n",
+    "            \n",
+    "            if result.modified_count or result.upserted_id:\n",
+    "                successful_updates += 1\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error saving record with time {record['time']}: {e}\")\n",
+    "    \n",
+    "    print(f\"Successfully processed {successful_updates} records\")"
    ]
   },
   {
@@ -145,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +261,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The last date is None\n",
+      "Fetch data up to 2024-11-09 06:00:00\r"
+     ]
+    }
+   ],
    "source": [
     "fetch_data()"
    ]
