--- a/ASS_2/q2.ipynb
+++ b/ASS_2/q2.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,25 +161,22 @@
     "    Return the datetime of the latest record in the database.\n",
     "    \"\"\"\n",
     "    db = client['binance']\n",
-    "    collection = db['COM6002_ASS2']  # Replace with your collection name\n",
+    "    collection = db['COM6002_ASS2']\n",
     "    \n",
     "    # Find the latest record by sorting in descending order\n",
     "    latest_record = collection.find_one(\n",
     "        {},\n",
-    "        sort=[('timestamp', -1)]  # Assuming 'timestamp' is your datetime field\n",
+    "        sort=[('time', -1)]  # Changed from 'timestamp' to 'time'\n",
     "    )\n",
     "    \n",
-    "    if latest_record and 'timestamp' in latest_record:\n",
-    "        return latest_record['timestamp']\n",
+    "    if latest_record and 'time' in latest_record:\n",
+    "        return latest_record['time']\n",
     "    return None\n",
     "\n",
     "def save_records(client: MongoClient, records: list) -> None:\n",
     "    \"\"\"\n",
-    "    Save the records to MongoDB\n",
-    "    \n",
-    "    Args:\n",
-    "        client: MongoDB client\n",
-    "        records: List of records to save\n",
+    "    Save the records to MongoDB, skipping duplicates\n",
+    "\n",
     "    \"\"\"\n",
     "    if not records:\n",
     "        print(\"No records to save\")\n",
@@ -188,24 +185,29 @@
     "    db = client['binance']\n",
     "    collection = db['COM6002_ASS2']\n",
     "    \n",
-    "    successful_updates = 0\n",
+    "    # Filter out records that already exist\n",
+    "    existing_times = set(\n",
+    "        doc['time'] for doc in \n",
+    "        collection.find(\n",
+    "            {'time': {'$in': [record['time'] for record in records]}}, \n",
+    "            {'time': 1}\n",
+    "        )\n",
+    "    )\n",
     "    \n",
-    "    for record in records:\n",
-    "        try:\n",
-    "            # Update document if exists, insert if it doesn't\n",
-    "            result = collection.update_one(\n",
-    "                {'time': record['time']},  # query criteria\n",
-    "                {'$set': record},          # update/insert data\n",
-    "                upsert=True                # insert if doesn't exist\n",
-    "            )\n",
-    "            \n",
-    "            if result.modified_count or result.upserted_id:\n",
-    "                successful_updates += 1\n",
-    "                \n",
-    "        except Exception as e:\n",
-    "            print(f\"Error saving record with time {record['time']}: {e}\")\n",
+    "    new_records = [\n",
+    "        record for record in records \n",
+    "        if record['time'] not in existing_times\n",
+    "    ]\n",
     "    \n",
-    "    print(f\"Successfully processed {successful_updates} records\")"
+    "    if not new_records:\n",
+    "        print(\"No new records to save\")\n",
+    "        return\n",
+    "        \n",
+    "    try:\n",
+    "        result = collection.insert_many(new_records)\n",
+    "        print(f\"Successfully inserted {len(result.inserted_ids)} new records\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving records: {e}\")"
    ]
   },
   {
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,20 +261,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The last date is None\n",
-      "Fetch data up to 2024-11-09 06:00:00\r"
+      "The last date is 2024-11-09 06:00:00\n",
+      "There is no new data yet.\n"
      ]
     }
    ],
    "source": [
     "fetch_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2024, 11, 9, 6, 0)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_last_date(connect_mongo())"
    ]
   },
   {
